# ChessCore

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.sh
ChessCore.xcodeproj/: project.pbxproj
ChessCore.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
VisualStudio/: ChessCore.sln  ChessCore.vcxproj  ChessCore.vcxproj.filters  ccore.vcxproj  ccore.vcxproj.filters  unittests.vcxproj  unittests.vcxproj.filters  x64exports.def  x86exports.def
ccore/: AnalyzeGames.cpp  Config.cpp  Config.h  Functions.cpp  Makefile  PlayGames.cpp  ProcessEpd.cpp  ccore.cpp  ccore.h
doc/: CFDB_Schema_v1.md  ccore.md  pgn-spec.txt  unofficial_cbh_format.txt  unofficial_ctg_format.txt
doc/OpeningClassification/: ECODLUXE.TXT  ECOINDEX.TXT  ECO_Opening_Variations.pgn  ecomast.txt
include/ChessCore/: AnnotMove.h  AppleUtil.h  Bitstream.h  Blob.h  CbhDatabase.h  CfdbDatabase.h  ChessCore.h  Data.h  Database.h  Epd.h  (+26 more)
src/: AnnotMove.cpp  AppleUtil.mm  AsmX64.asm  AsmX86.S  AsmX86.asm  Bitstream.cpp  Blob.cpp  CbhDatabase.cpp  CfdbDatabase.cpp  ChessCore.cpp  Data.cpp  Database.cpp  DllMain.cpp  Engine.cpp  EngineMessage.cpp  EngineMessageQueue.cpp  Epd.cpp  Game.cpp  GameHeader.cpp  IndexManager.cpp  IoEvent.cpp  IoEventWaiter.cpp  Log.cpp  Lowlevel.cpp  Makefile  Move.cpp  Mutex.cpp  OpeningTree.cpp  PgnDatabase.cpp  PgnScanner.cpp  PgnScanner.l  Player.cpp  Position.cpp  PositionHash.cpp  Process.cpp  ProgOption.cpp  Rand64.cpp  SqliteStatement.cpp  Thread.cpp  TimeControl.cpp  (+3 more)
tools/: create_so_links.sh  find_buggy_pos.py  flex.py  package.sh  shellwrapper  upver.py
(+80 files in other folders)
